tests/fail-namespace3.mg
namespace sp { }
namespace sp { } // error: duplicate namespace

object main { }
